Use Authorization header instead of xhr username/password
[fixes #103]

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "rfc 6578"
   ],
   "dependencies": {
+    "btoa-lite": "^1.0.0",
     "co": "^4.6.0",
     "xmldom": "^0.1.19",
     "xmlhttprequest": "^1.7.0"
